Tab throbber + favicon visibility fix

--- a/chrome/browser/browser.css
+++ b/chrome/browser/browser.css
@@ -4457,3 +4457,8 @@ list-style-image: url("chrome://browser/skin/customizableui/MetroSwitch.png");
 #email-link-button[disabled] {
   -moz-image-region: rect(48px 144px 72px 120px);
 }
+
+/* tab throbber fixes */
+.tab-throbber:not([busy]) + .tab-icon-image {
+  display: block !important
+}
